--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,9 @@ ftfy==6.2.3
 # Graph processing
 networkx==3.0
 # torch-geometric  # Uncomment and add version
-# torch-scatter  # Uncomment and add version
+torch-scatter==2.1.2+pt24cu118
+qtorch==0.3.0
+ordered-set==4.1.0
 
 # Utilities
 tqdm==4.67.1
@@ -89,6 +91,7 @@ smmap==5.0.2
 
 # Miscellaneous
 attrs==25.3.0
+ninja==1.13.0
 charset-normalizer==3.4.3
 filelock==3.13.1
 idna==3.10
