--- a/config/log_config.json
+++ b/config/log_config.json
@@ -10,7 +10,7 @@
     "handlers": {
         "file_handler": {
             "class": "logging.FileHandler",
-            "level": "DEBUG",
+            "level": "INFO",
             "formatter": "simple",
             "filename": "python_logging.log",
             "encoding": "utf8"
@@ -18,7 +18,7 @@
     },
 
     "root": {
-        "level": "DEBUG",
+        "level": "INFO",
         "handlers": ["file_handler"]
     }
 }
